{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 202,
  "lineage": "48eb508f-0d1c-2a06-d025-87353a019e33",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:357938784458:loadbalancer/app/backend-alb/1ef565695c0e5207",
            "arn_suffix": "app/backend-alb/1ef565695c0e5207",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "backend-alb-368716125.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:357938784458:loadbalancer/app/backend-alb/1ef565695c0e5207",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "backend-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0661b7ceb2efe8589"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05b58f6a72616b5c1"
              },
              {
                "subnet_id": "subnet-0c2bdcb061187746f"
              }
            ],
            "subnets": [
              "subnet-05b58f6a72616b5c1",
              "subnet-0c2bdcb061187746f"
            ],
            "tags": {
              "Name": "backend-alb"
            },
            "tags_all": {
              "Name": "backend-alb"
            },
            "vpc_id": "vpc-0a95843557cadb490",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:357938784458:loadbalancer/app/backend-alb/1ef565695c0e5207"
          },
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.main_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:357938784458:loadbalancer/app/frontend-alb/7350a8a83a7789c9",
            "arn_suffix": "app/frontend-alb/7350a8a83a7789c9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "frontend-alb-1103720957.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:357938784458:loadbalancer/app/frontend-alb/7350a8a83a7789c9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "frontend-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0661b7ceb2efe8589"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05b58f6a72616b5c1"
              },
              {
                "subnet_id": "subnet-0c2bdcb061187746f"
              }
            ],
            "subnets": [
              "subnet-05b58f6a72616b5c1",
              "subnet-0c2bdcb061187746f"
            ],
            "tags": {
              "Name": "frontend-alb"
            },
            "tags_all": {
              "Name": "frontend-alb"
            },
            "vpc_id": "vpc-0a95843557cadb490",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:357938784458:loadbalancer/app/frontend-alb/7350a8a83a7789c9"
          },
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.main_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:357938784458:listener/app/backend-alb/1ef565695c0e5207/e66ef28dfcf1ac12",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:357938784458:targetgroup/backend-tg/012cf7bc7fc66152",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:357938784458:listener/app/backend-alb/1ef565695c0e5207/e66ef28dfcf1ac12",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:357938784458:loadbalancer/app/backend-alb/1ef565695c0e5207",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:357938784458:listener/app/backend-alb/1ef565695c0e5207/e66ef28dfcf1ac12"
          },
          "dependencies": [
            "module.alb.aws_lb.backend_alb",
            "module.alb.aws_lb_target_group.backend_tg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.main_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:357938784458:listener/app/frontend-alb/7350a8a83a7789c9/6dcf6541ee9b1304",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:357938784458:targetgroup/frontend-tg/4c4e1d08ea2a2039",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:357938784458:listener/app/frontend-alb/7350a8a83a7789c9/6dcf6541ee9b1304",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:357938784458:loadbalancer/app/frontend-alb/7350a8a83a7789c9",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:357938784458:listener/app/frontend-alb/7350a8a83a7789c9/6dcf6541ee9b1304"
          },
          "dependencies": [
            "module.alb.aws_lb.frontend_alb",
            "module.alb.aws_lb_target_group.frontend_tg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.main_sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:357938784458:targetgroup/backend-tg/012cf7bc7fc66152",
            "arn_suffix": "targetgroup/backend-tg/012cf7bc7fc66152",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:357938784458:targetgroup/backend-tg/012cf7bc7fc66152",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:357938784458:loadbalancer/app/backend-alb/1ef565695c0e5207"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "backend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "backend-tg"
            },
            "tags_all": {
              "Name": "backend-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a95843557cadb490"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:357938784458:targetgroup/backend-tg/012cf7bc7fc66152"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:357938784458:targetgroup/frontend-tg/4c4e1d08ea2a2039",
            "arn_suffix": "targetgroup/frontend-tg/4c4e1d08ea2a2039",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:357938784458:targetgroup/frontend-tg/4c4e1d08ea2a2039",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:357938784458:loadbalancer/app/frontend-alb/7350a8a83a7789c9"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "frontend-tg"
            },
            "tags_all": {
              "Name": "frontend-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a95843557cadb490"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:357938784458:targetgroup/frontend-tg/4c4e1d08ea2a2039"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b6c6ebed2801a5cb",
            "arn": "arn:aws:ec2:us-east-1:357938784458:instance/i-02ffaff55b1a9f123",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02ffaff55b1a9f123",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Kalyankey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09a121865d6a75c2f"
              }
            ],
            "primary_network_interface_id": "eni-09a121865d6a75c2f",
            "private_dns": "ip-170-20-1-9.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "170.20.1.9",
            "public_dns": "ec2-44-193-229-72.compute-1.amazonaws.com",
            "public_ip": "44.193.229.72",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-052faa3b2f2af7aaf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0661b7ceb2efe8589"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c2bdcb061187746f",
            "tags": {
              "Name": "bastion-host"
            },
            "tags_all": {
              "Name": "bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0661b7ceb2efe8589"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "i-02ffaff55b1a9f123",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.main_sg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff2ac015924d603c",
            "arn": "arn:aws:ec2:us-east-1:357938784458:elastic-ip/eipalloc-0ff2ac015924d603c",
            "association_id": "eipassoc-0a60820f7a4c4b079",
            "domain": "vpc",
            "id": "eipalloc-0ff2ac015924d603c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d222d76bb7cd0eea",
            "private_dns": "ip-170-20-1-108.ec2.internal",
            "private_ip": "170.20.1.108",
            "public_dns": "ec2-52-2-73-168.compute-1.amazonaws.com",
            "public_ip": "52.2.73.168",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357938784458:internet-gateway/igw-051864a997912629f",
            "id": "igw-051864a997912629f",
            "owner_id": "357938784458",
            "region": "us-east-1",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-0a95843557cadb490"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff2ac015924d603c",
            "association_id": "eipassoc-0a60820f7a4c4b079",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-02ac0cd17ac26ea31",
            "network_interface_id": "eni-0d222d76bb7cd0eea",
            "private_ip": "170.20.1.108",
            "public_ip": "52.2.73.168",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c2bdcb061187746f",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            },
            "vpc_id": "vpc-0a95843557cadb490"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357938784458:route-table/rtb-037e3d398448a6c0b",
            "id": "rtb-037e3d398448a6c0b",
            "owner_id": "357938784458",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02ac0cd17ac26ea31",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a95843557cadb490"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "rtb-037e3d398448a6c0b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357938784458:route-table/rtb-06254431cf38cdbcc",
            "id": "rtb-06254431cf38cdbcc",
            "owner_id": "357938784458",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-051864a997912629f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a95843557cadb490"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "rtb-06254431cf38cdbcc",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5762b6a422d0f38",
            "region": "us-east-1",
            "route_table_id": "rtb-037e3d398448a6c0b",
            "subnet_id": "subnet-0cbecb55cbce50894"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0139a8276be562212",
            "region": "us-east-1",
            "route_table_id": "rtb-037e3d398448a6c0b",
            "subnet_id": "subnet-094a3b4475e575820"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c47fb4020f7ea85",
            "region": "us-east-1",
            "route_table_id": "rtb-037e3d398448a6c0b",
            "subnet_id": "subnet-065b2ebdda06c14a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0295df25d69cea0e0",
            "region": "us-east-1",
            "route_table_id": "rtb-037e3d398448a6c0b",
            "subnet_id": "subnet-0a255324feedb3c8b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093c9bf8e56f4b525",
            "region": "us-east-1",
            "route_table_id": "rtb-037e3d398448a6c0b",
            "subnet_id": "subnet-068563a1117eef13d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000368d6437c05541",
            "region": "us-east-1",
            "route_table_id": "rtb-037e3d398448a6c0b",
            "subnet_id": "subnet-0505a2c4240446747"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b1af7dabe3be8b5",
            "region": "us-east-1",
            "route_table_id": "rtb-06254431cf38cdbcc",
            "subnet_id": "subnet-0c2bdcb061187746f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06de959d460246b9a",
            "region": "us-east-1",
            "route_table_id": "rtb-06254431cf38cdbcc",
            "subnet_id": "subnet-05b58f6a72616b5c1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357938784458:subnet/subnet-0cbecb55cbce50894",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "170.20.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbecb55cbce50894",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "357938784458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-3"
            },
            "tags_all": {
              "Name": "private-subnet-3"
            },
            "vpc_id": "vpc-0a95843557cadb490"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "subnet-0cbecb55cbce50894",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357938784458:subnet/subnet-094a3b4475e575820",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "170.20.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094a3b4475e575820",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "357938784458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-4"
            },
            "tags_all": {
              "Name": "private-subnet-4"
            },
            "vpc_id": "vpc-0a95843557cadb490"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "subnet-094a3b4475e575820",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357938784458:subnet/subnet-065b2ebdda06c14a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "170.20.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065b2ebdda06c14a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "357938784458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-5"
            },
            "tags_all": {
              "Name": "private-subnet-5"
            },
            "vpc_id": "vpc-0a95843557cadb490"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "subnet-065b2ebdda06c14a4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357938784458:subnet/subnet-0a255324feedb3c8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "170.20.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a255324feedb3c8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "357938784458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-6"
            },
            "tags_all": {
              "Name": "private-subnet-6"
            },
            "vpc_id": "vpc-0a95843557cadb490"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "subnet-0a255324feedb3c8b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357938784458:subnet/subnet-068563a1117eef13d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "170.20.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068563a1117eef13d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "357938784458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-7"
            },
            "tags_all": {
              "Name": "private-subnet-7"
            },
            "vpc_id": "vpc-0a95843557cadb490"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "subnet-068563a1117eef13d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357938784458:subnet/subnet-0505a2c4240446747",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "170.20.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0505a2c4240446747",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "357938784458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-8"
            },
            "tags_all": {
              "Name": "private-subnet-8"
            },
            "vpc_id": "vpc-0a95843557cadb490"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "subnet-0505a2c4240446747",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357938784458:subnet/subnet-0c2bdcb061187746f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "170.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2bdcb061187746f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "357938784458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0a95843557cadb490"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "subnet-0c2bdcb061187746f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357938784458:subnet/subnet-05b58f6a72616b5c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "170.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b58f6a72616b5c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "357938784458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0a95843557cadb490"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "subnet-05b58f6a72616b5c1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357938784458:vpc/vpc-0a95843557cadb490",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "170.20.0.0/16",
            "default_network_acl_id": "acl-0d2d8c0f5b027024c",
            "default_route_table_id": "rtb-07ebb7a57b99d8846",
            "default_security_group_id": "sg-0ad357357d2d0b74d",
            "dhcp_options_id": "dopt-0c50db0b14ddb7b3a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a95843557cadb490",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07ebb7a57b99d8846",
            "owner_id": "357938784458",
            "region": "us-east-1",
            "tags": {
              "Name": "MAIN-3-TIER-VPC"
            },
            "tags_all": {
              "Name": "MAIN-3-TIER-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "vpc-0a95843557cadb490",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.secondary_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:357938784458:loadbalancer/app/backend-alb/812cdce1f67cdd98",
            "arn_suffix": "app/backend-alb/812cdce1f67cdd98",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "backend-alb-880711270.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:357938784458:loadbalancer/app/backend-alb/812cdce1f67cdd98",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "backend-alb",
            "preserve_host_header": false,
            "region": "us-west-2",
            "security_groups": [
              "sg-0d1457473658ee354"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-003a4f3f84dec4f35"
              },
              {
                "subnet_id": "subnet-0f14de7118bfb8dca"
              }
            ],
            "subnets": [
              "subnet-003a4f3f84dec4f35",
              "subnet-0f14de7118bfb8dca"
            ],
            "tags": {
              "Name": "backend-alb"
            },
            "tags_all": {
              "Name": "backend-alb"
            },
            "vpc_id": "vpc-05b9e95397a8d1ad8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:357938784458:loadbalancer/app/backend-alb/812cdce1f67cdd98"
          },
          "dependencies": [
            "module.secondary_network.aws_subnet.public",
            "module.secondary_network.aws_vpc.main",
            "module.secondary_security_group.aws_security_group.main_sg"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:357938784458:loadbalancer/app/frontend-alb/33c65e68dcb73d44",
            "arn_suffix": "app/frontend-alb/33c65e68dcb73d44",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "frontend-alb-566409137.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:357938784458:loadbalancer/app/frontend-alb/33c65e68dcb73d44",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "frontend-alb",
            "preserve_host_header": false,
            "region": "us-west-2",
            "security_groups": [
              "sg-0d1457473658ee354"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-003a4f3f84dec4f35"
              },
              {
                "subnet_id": "subnet-0f14de7118bfb8dca"
              }
            ],
            "subnets": [
              "subnet-003a4f3f84dec4f35",
              "subnet-0f14de7118bfb8dca"
            ],
            "tags": {
              "Name": "frontend-alb"
            },
            "tags_all": {
              "Name": "frontend-alb"
            },
            "vpc_id": "vpc-05b9e95397a8d1ad8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:357938784458:loadbalancer/app/frontend-alb/33c65e68dcb73d44"
          },
          "dependencies": [
            "module.secondary_network.aws_subnet.public",
            "module.secondary_network.aws_vpc.main",
            "module.secondary_security_group.aws_security_group.main_sg"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:357938784458:listener/app/backend-alb/812cdce1f67cdd98/e33f7d0b54294c4c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:357938784458:targetgroup/backend-tg/59b46581ee2e9786",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:357938784458:listener/app/backend-alb/812cdce1f67cdd98/e33f7d0b54294c4c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:357938784458:loadbalancer/app/backend-alb/812cdce1f67cdd98",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:357938784458:listener/app/backend-alb/812cdce1f67cdd98/e33f7d0b54294c4c"
          },
          "dependencies": [
            "module.secondary_alb.aws_lb.backend_alb",
            "module.secondary_alb.aws_lb_target_group.backend_tg",
            "module.secondary_network.aws_subnet.public",
            "module.secondary_network.aws_vpc.main",
            "module.secondary_security_group.aws_security_group.main_sg"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:357938784458:listener/app/frontend-alb/33c65e68dcb73d44/8e2af5e5aad6eab9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:357938784458:targetgroup/frontend-tg/d3adc979b2fcda48",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:357938784458:listener/app/frontend-alb/33c65e68dcb73d44/8e2af5e5aad6eab9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:357938784458:loadbalancer/app/frontend-alb/33c65e68dcb73d44",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:357938784458:listener/app/frontend-alb/33c65e68dcb73d44/8e2af5e5aad6eab9"
          },
          "dependencies": [
            "module.secondary_alb.aws_lb.frontend_alb",
            "module.secondary_alb.aws_lb_target_group.frontend_tg",
            "module.secondary_network.aws_subnet.public",
            "module.secondary_network.aws_vpc.main",
            "module.secondary_security_group.aws_security_group.main_sg"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:357938784458:targetgroup/backend-tg/59b46581ee2e9786",
            "arn_suffix": "targetgroup/backend-tg/59b46581ee2e9786",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:357938784458:targetgroup/backend-tg/59b46581ee2e9786",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:357938784458:loadbalancer/app/backend-alb/812cdce1f67cdd98"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "backend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "backend-tg"
            },
            "tags_all": {
              "Name": "backend-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05b9e95397a8d1ad8"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:357938784458:targetgroup/backend-tg/59b46581ee2e9786"
          },
          "dependencies": [
            "module.secondary_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:357938784458:targetgroup/frontend-tg/d3adc979b2fcda48",
            "arn_suffix": "targetgroup/frontend-tg/d3adc979b2fcda48",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:357938784458:targetgroup/frontend-tg/d3adc979b2fcda48",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:357938784458:loadbalancer/app/frontend-alb/33c65e68dcb73d44"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "frontend-tg"
            },
            "tags_all": {
              "Name": "frontend-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05b9e95397a8d1ad8"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:357938784458:targetgroup/frontend-tg/d3adc979b2fcda48"
          },
          "dependencies": [
            "module.secondary_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e5e1413a3bf2d262",
            "arn": "arn:aws:ec2:us-west-2:357938784458:instance/i-053e65bf1ce8fdc1a",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-053e65bf1ce8fdc1a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "uswestkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ef3bb6c5f28e8c27"
              }
            ],
            "primary_network_interface_id": "eni-0ef3bb6c5f28e8c27",
            "private_dns": "ip-170-21-1-53.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "170.21.1.53",
            "public_dns": "ec2-54-212-103-113.us-west-2.compute.amazonaws.com",
            "public_ip": "54.212.103.113",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f404fdf83078eeca",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0d1457473658ee354"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003a4f3f84dec4f35",
            "tags": {
              "Name": "bastion-host"
            },
            "tags_all": {
              "Name": "bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d1457473658ee354"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "i-053e65bf1ce8fdc1a",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.secondary_network.aws_subnet.public",
            "module.secondary_network.aws_vpc.main",
            "module.secondary_security_group.aws_security_group.main_sg"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-035eb6a53680df612",
            "arn": "arn:aws:ec2:us-west-2:357938784458:elastic-ip/eipalloc-035eb6a53680df612",
            "association_id": "eipassoc-006091d1689d6ca26",
            "domain": "vpc",
            "id": "eipalloc-035eb6a53680df612",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0266366140a35725a",
            "private_dns": "ip-170-21-1-113.us-west-2.compute.internal",
            "private_ip": "170.21.1.113",
            "public_dns": "ec2-16-144-90-231.us-west-2.compute.amazonaws.com",
            "public_ip": "16.144.90.231",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.secondary_network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:357938784458:internet-gateway/igw-0838e1f9f337f915e",
            "id": "igw-0838e1f9f337f915e",
            "owner_id": "357938784458",
            "region": "us-west-2",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-05b9e95397a8d1ad8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.secondary_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-035eb6a53680df612",
            "association_id": "eipassoc-006091d1689d6ca26",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0856ddb2ea4ba67eb",
            "network_interface_id": "eni-0266366140a35725a",
            "private_ip": "170.21.1.113",
            "public_ip": "16.144.90.231",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-003a4f3f84dec4f35",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            },
            "vpc_id": "vpc-05b9e95397a8d1ad8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.secondary_network.aws_eip.nat",
            "module.secondary_network.aws_subnet.public",
            "module.secondary_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:357938784458:route-table/rtb-0d63c02ccec8c98a1",
            "id": "rtb-0d63c02ccec8c98a1",
            "owner_id": "357938784458",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0856ddb2ea4ba67eb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b9e95397a8d1ad8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "rtb-0d63c02ccec8c98a1",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.secondary_network.aws_eip.nat",
            "module.secondary_network.aws_nat_gateway.nat",
            "module.secondary_network.aws_subnet.public",
            "module.secondary_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:357938784458:route-table/rtb-0f01ea67cb5eb530b",
            "id": "rtb-0f01ea67cb5eb530b",
            "owner_id": "357938784458",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0838e1f9f337f915e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b9e95397a8d1ad8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "rtb-0f01ea67cb5eb530b",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.secondary_network.aws_internet_gateway.igw",
            "module.secondary_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8128c47d02201e2",
            "region": "us-west-2",
            "route_table_id": "rtb-0d63c02ccec8c98a1",
            "subnet_id": "subnet-0f578949afb25fdce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.secondary_network.aws_eip.nat",
            "module.secondary_network.aws_nat_gateway.nat",
            "module.secondary_network.aws_route_table.private",
            "module.secondary_network.aws_subnet.private",
            "module.secondary_network.aws_subnet.public",
            "module.secondary_network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09274f46d9ff89b9c",
            "region": "us-west-2",
            "route_table_id": "rtb-0d63c02ccec8c98a1",
            "subnet_id": "subnet-0ea47cfbd85cd3988"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.secondary_network.aws_eip.nat",
            "module.secondary_network.aws_nat_gateway.nat",
            "module.secondary_network.aws_route_table.private",
            "module.secondary_network.aws_subnet.private",
            "module.secondary_network.aws_subnet.public",
            "module.secondary_network.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab1f20a2a32cdcd7",
            "region": "us-west-2",
            "route_table_id": "rtb-0d63c02ccec8c98a1",
            "subnet_id": "subnet-03155c88052b1716d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.secondary_network.aws_eip.nat",
            "module.secondary_network.aws_nat_gateway.nat",
            "module.secondary_network.aws_route_table.private",
            "module.secondary_network.aws_subnet.private",
            "module.secondary_network.aws_subnet.public",
            "module.secondary_network.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfb12300c32abd82",
            "region": "us-west-2",
            "route_table_id": "rtb-0d63c02ccec8c98a1",
            "subnet_id": "subnet-06dd2957f941d91b0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.secondary_network.aws_eip.nat",
            "module.secondary_network.aws_nat_gateway.nat",
            "module.secondary_network.aws_route_table.private",
            "module.secondary_network.aws_subnet.private",
            "module.secondary_network.aws_subnet.public",
            "module.secondary_network.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015e8068266035e2f",
            "region": "us-west-2",
            "route_table_id": "rtb-0d63c02ccec8c98a1",
            "subnet_id": "subnet-0058da2547abb222c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.secondary_network.aws_eip.nat",
            "module.secondary_network.aws_nat_gateway.nat",
            "module.secondary_network.aws_route_table.private",
            "module.secondary_network.aws_subnet.private",
            "module.secondary_network.aws_subnet.public",
            "module.secondary_network.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058a63442c6437537",
            "region": "us-west-2",
            "route_table_id": "rtb-0d63c02ccec8c98a1",
            "subnet_id": "subnet-0571a8e305413470e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.secondary_network.aws_eip.nat",
            "module.secondary_network.aws_nat_gateway.nat",
            "module.secondary_network.aws_route_table.private",
            "module.secondary_network.aws_subnet.private",
            "module.secondary_network.aws_subnet.public",
            "module.secondary_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022754302579e740e",
            "region": "us-west-2",
            "route_table_id": "rtb-0f01ea67cb5eb530b",
            "subnet_id": "subnet-003a4f3f84dec4f35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.secondary_network.aws_internet_gateway.igw",
            "module.secondary_network.aws_route_table.public",
            "module.secondary_network.aws_subnet.public",
            "module.secondary_network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbb8fc36a77d41c7",
            "region": "us-west-2",
            "route_table_id": "rtb-0f01ea67cb5eb530b",
            "subnet_id": "subnet-0f14de7118bfb8dca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.secondary_network.aws_internet_gateway.igw",
            "module.secondary_network.aws_route_table.public",
            "module.secondary_network.aws_subnet.public",
            "module.secondary_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:357938784458:subnet/subnet-0f578949afb25fdce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "170.21.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f578949afb25fdce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "357938784458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "private-subnet-3"
            },
            "tags_all": {
              "Name": "private-subnet-3"
            },
            "vpc_id": "vpc-05b9e95397a8d1ad8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "subnet-0f578949afb25fdce",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.secondary_network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:357938784458:subnet/subnet-0ea47cfbd85cd3988",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "170.21.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea47cfbd85cd3988",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "357938784458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "private-subnet-4"
            },
            "tags_all": {
              "Name": "private-subnet-4"
            },
            "vpc_id": "vpc-05b9e95397a8d1ad8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "subnet-0ea47cfbd85cd3988",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.secondary_network.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:357938784458:subnet/subnet-03155c88052b1716d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "170.21.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03155c88052b1716d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "357938784458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "private-subnet-5"
            },
            "tags_all": {
              "Name": "private-subnet-5"
            },
            "vpc_id": "vpc-05b9e95397a8d1ad8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "subnet-03155c88052b1716d",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.secondary_network.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:357938784458:subnet/subnet-06dd2957f941d91b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "170.21.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06dd2957f941d91b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "357938784458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "private-subnet-6"
            },
            "tags_all": {
              "Name": "private-subnet-6"
            },
            "vpc_id": "vpc-05b9e95397a8d1ad8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "subnet-06dd2957f941d91b0",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.secondary_network.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:357938784458:subnet/subnet-0058da2547abb222c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "170.21.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0058da2547abb222c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "357938784458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "private-subnet-7"
            },
            "tags_all": {
              "Name": "private-subnet-7"
            },
            "vpc_id": "vpc-05b9e95397a8d1ad8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "subnet-0058da2547abb222c",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.secondary_network.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:357938784458:subnet/subnet-0571a8e305413470e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "170.21.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0571a8e305413470e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "357938784458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "private-subnet-8"
            },
            "tags_all": {
              "Name": "private-subnet-8"
            },
            "vpc_id": "vpc-05b9e95397a8d1ad8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "subnet-0571a8e305413470e",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.secondary_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:357938784458:subnet/subnet-003a4f3f84dec4f35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "170.21.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003a4f3f84dec4f35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "357938784458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-05b9e95397a8d1ad8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "subnet-003a4f3f84dec4f35",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.secondary_network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:357938784458:subnet/subnet-0f14de7118bfb8dca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "170.21.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f14de7118bfb8dca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "357938784458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-05b9e95397a8d1ad8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "subnet-0f14de7118bfb8dca",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.secondary_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:357938784458:vpc/vpc-05b9e95397a8d1ad8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "170.21.0.0/16",
            "default_network_acl_id": "acl-06fc8c8ca0faa9cb1",
            "default_route_table_id": "rtb-023e67ef216e4b34e",
            "default_security_group_id": "sg-062938fa7578331b0",
            "dhcp_options_id": "dopt-04a562b19bf378fc0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05b9e95397a8d1ad8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-023e67ef216e4b34e",
            "owner_id": "357938784458",
            "region": "us-west-2",
            "tags": {
              "Name": "MAIN-3-TIER-VPC"
            },
            "tags_all": {
              "Name": "MAIN-3-TIER-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "vpc-05b9e95397a8d1ad8",
            "region": "us-west-2"
          }
        }
      ]
    },
    {
      "module": "module.secondary_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:357938784458:security-group/sg-0d1457473658ee354",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1457473658ee354",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20260316101648351300000004",
            "name_prefix": "terraform-",
            "owner_id": "357938784458",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MAIN-security-group"
            },
            "tags_all": {
              "Name": "MAIN-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b9e95397a8d1ad8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "sg-0d1457473658ee354",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.secondary_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357938784458:security-group/sg-0661b7ceb2efe8589",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0661b7ceb2efe8589",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20260316101640975000000001",
            "name_prefix": "terraform-",
            "owner_id": "357938784458",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MAIN-security-group"
            },
            "tags_all": {
              "Name": "MAIN-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a95843557cadb490"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "sg-0661b7ceb2efe8589",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}